[package]
authors = ["Luke Chu <lukewchu@outlook.com>"]
edition = "2018"
name = "coconut"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
nom = "6.0.0"
# For nom 6 support. Change to crates.io version when nom_locate is published with changes.
nom_locate = {git = "https://github.com/fflorent/nom_locate", rev = "164fd44"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
unicode-xid = "0.2.1"

[dev-dependencies]
insta = "1.1.0"
