[package]
authors = ["Luke Chu <lukewchu@outlook.com>"]
categories = ["parsing"]
description = "A new, fast, and general purpose JavaScript parser written in Rust that generates ESTree compatible abstract syntax trees"
edition = "2018"
homepage = "https://github.com/lukechu10/almond"
keywords = ["javascript", "parser"]
license = "MIT OR Apache-2.0"
name = "almond"
readme = "README.md"
repository = "https://github.com/lukechu10/almond"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
nom = "6.0.1"
nom_locate = "3.0.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
unicode-xid = "0.2.1"

[dev-dependencies]
criterion = "0.3.3"
insta = "1.1.0"

[profile.release]
# Uncomment the following line to debug in release mode.
# debug = true
opt-level = 3

[[bench]]
harness = false
name = "jquery-v3-5-1"

[[bench]]
harness = false
name = "react-development-v17-0-1"

[[bench]]
harness = false
name = "angular-v1-8-0"

[[bench]]
harness = false
name = "fibonacci"
